# Polar-Two

./: .gitignore  README.md  notes.txt
docker/.devcontainer/: Dockerfile  devcontainer.json
docker/pocket/: HowTo.md  anaconda.sh  install.sh  packages.sh  ros.sh
firmware/: platformio.ini
firmware/include/: Constants.hpp  HardwareManager.hpp
firmware/include/devices/: l298n.hpp  motor.hpp  motor_controller.hpp  quadrature_encoder.hpp
firmware/include/devices/base/: driver.hpp  encoder.hpp
firmware/include/util/: Utility.hpp  builtin_led.hpp  led.hpp
firmware/src/: main.cpp
ros2_ws/src/camera_driver/: CMakeLists.txt  package.xml
ros2_ws/src/camera_driver/config/: camera_driver_config.yaml
ros2_ws/src/camera_driver/launch/: camera_driver.launch.py
ros2_ws/src/camera_driver/src/: Main.cpp  parameters.yaml
ros2_ws/src/differential_drive_controller/include/differential_drive_controller/util/: differential_drive_drivetrain.hpp  differential_drive_kinematics.hpp
ros2_ws/src/differential_drive_controller/src/: differential_drive_controller.cpp  differential_drive_controller_parameters.yaml
ros2_ws/src/joystick_driver/config/: joystick.yaml
ros2_ws/src/joystick_driver/include/: gamepad_interface.hpp
ros2_ws/src/microros_hardware_interface/bringup/config/: controllers.yaml  mapper_params_online_async.yaml
ros2_ws/src/microros_hardware_interface/bringup/launch/: sim.launch.py
ros2_ws/src/microros_hardware_interface/bringup/worlds/: boxed.sdf
ros2_ws/src/microros_hardware_interface/description/ros2_control/: microros_hardware.ros2_control.xacro
ros2_ws/src/microros_hardware_interface/description/rviz/: view.rviz
ros2_ws/src/microros_hardware_interface/description/urdf/: robot.urdf.xacro
src/camera_driver/config/: camera_seven_calibration.yaml
src/camera_driver/src/: Main.cpp
src/camera_handler/: package.xml  setup.py
src/camera_handler/camera_handler/src/: compressed.py  driver.py
src/camera_handler/launch/: camera_compressor.launch.py  camera_driver.launch.py
src/carbot_hardware/bringup/config/: carlikebot_controllers.yaml
src/carbot_hardware/bringup/launch/: carlikebot.launch.py  carlikebot_sim.launch.py  carlikebot_test.launch.py  controller_manager.launch.py  robot_state_publisher.launch.py
src/carbot_hardware/description/launch/: view_robot.launch.py
src/carbot_hardware/description/ros2_control/: carlikebot.ros2_control.xacro
src/carbot_hardware/description/urdf/: bigbrain.urdf.xacro  carlikebot.urdf.xacro  carlikebot_description.urdf.xacro  lidar.xacro
src/carbot_hardware/description/urdf/assets/: Chassis.dae  Motor_Assembly.dae  Wheel.dae
src/carbot_hardware/doc/: userdoc.rst
src/carbot_hardware/test/: test_urdf_xacro.py
src/debug_python/: package.xml  setup.cfg  setup.py
src/debug_python/debug_python/src/: test.py
src/debug_python/launch/: test.launch.py
src/diff_drive_controller/: differential_drive_plugin.xml  package.xml
src/diff_drive_controller/include/differential_drive_controller/: differential_drive_controller.hpp
src/differential_drive_controller/: CMakeLists.txt  package.xml
src/differential_drive_controller/include/differential_drive_controller/: differential_drive_controller.hpp
src/differential_drive_controller/include/differential_drive_controller/util/: differential_drive_drivetrain.hpp  differential_drive_odometry.hpp  utility.hpp
src/differential_drive_controller/include/differential_drive_controller/utility/: DifferentialDriveKinematics.hpp  DifferentialDriveOdometry.hpp  Utility.hpp
src/differential_drive_controller/src/: differential_drive_controller.cpp  differential_drive_controller_parameters.yaml
src/driverstation/: CMakeLists.txt  package.xml
src/driverstation/config/: ds.yaml
src/driverstation/include/driverstation/: dsgui.cpp  dsgui.h  dsgui.ui
src/driverstation/src/: main.cpp
src/driverstation_msgs/: CMakeLists.txt  package.xml
src/driverstation_msgs/msg/: DriverstationStatus.msg
src/joystick_driver/config/: joystick.yaml
src/joystick_driver/include/: constants.hpp  gamepad_interface.hpp
src/joystick_driver/launch/: joystick.launch.py
src/joystick_driver/src/: Joystick.cpp
src/joystick_handler/: CMakeLists.txt  package.xml
src/joystick_handler/include/: constants.hpp  gamepad_interface.hpp
src/joystick_handler/launch/: joystick.launch.py
src/joystick_handler/src/: Joystick.cpp
src/microros_hardware_interface/: CMakeLists.txt  README.md  package.xml
src/microros_hardware_interface/bringup/config/: controllers.yaml  gz_bridge.yaml
src/microros_hardware_interface/bringup/launch/: carlikebot.launch.py  controller_manager.launch.py  external_controllers.launch.py  external_controllers.py  main.launch.py  robot_state_publisher.launch.py  rviz2.launch.py  sim.launch.py
src/microros_hardware_interface/bringup/worlds/: obstacles.world
src/microros_hardware_interface/description/launch/: view_robot.launch.py
src/microros_hardware_interface/description/ros2_control/: carlikebot.ros2_control.xacro  microros_hardware.ros2_control.xacro
src/microros_hardware_interface/description/rviz/: view.rviz
src/microros_hardware_interface/description/urdf/: core.urdf.xacro  robot.urdf.xacro
src/microros_hardware_interface/description/urdf/components/: camera.xacro
src/microros_hardware_interface/description/urdf/util/: constants.xacro
src/microros_hardware_interface/hardware/: diffbot_system.cpp
src/microros_hardware_interface/hardware/include/carbot_hardware/: arduino_comms.hpp  diffbot_system.hpp  visibility_control.h
src/microros_hardware_interface/hardware/include/microros_hardware_interface/: diffbot_system.hpp  motor_interface.hpp  topic_interface.hpp
src/my_robot/: CMakeLists.txt
src/my_robot/config/: joystick.yaml
src/my_robot/launch/: effort_translator.launch.py  simulation.launch.py
src/my_robot/src/util/: EffortTranslator.cpp  GazeboTranslator.cpp
uros_ws/: install.sh
uros_ws/src/uros_helper/: CMakeLists.txt  package.xml
uros_ws/src/uros_helper/launch/: microros.launch.py
(+31 files in other folders)
